manifest/murchace/service-v6.yaml
apiVersion: v1
kind: Service
metadata:
  name: murchace-v6
  labels:
    io.cilium/lb-pool: ula
  namespace: murchace
  annotations:
    external-dns.alpha.kubernetes.io/hostname: murchace.svc.ddlia.com
spec:
  ipFamilyPolicy: SingleStack
  ipFamilies:
  - IPv6
  selector:
    app: murchace
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
