manifest/murchace/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: murchace
  namespace: murchace
spec:
  type: ClusterIP
  selector:
    app: murchace
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
